--- a/index.html
+++ b/index.html
@@ -3,7 +3,9 @@
 
 <head>
      <title>HTML Application</title>
-	 <link href="css/site.css" rel="stylesheet">
+	<link href="css/site.css" rel="stylesheet">
+	<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
+	<link rel="icon" href="/favicon.ico" type="image/x-icon">
 </head>
 
 <body>
